Feat: YOLO with grayscale
#Refrence: https://medium.com/@ing.mauricioglez1409/yolo-grayscale-training-b3a3b46dec5f

--- a/ultralytics/cfg/default.yaml
+++ b/ultralytics/cfg/default.yaml
@@ -127,3 +127,6 @@ tracker: botsort.yaml # (str) tracker type, choices=[botsort.yaml, bytetrack.yam
 
 # My Settings
 compute_pose: True
+
+# Grayscale
+ch: 3
