--- a/ultralytics/cfg/datasets/brain-tumor.yaml
+++ b/ultralytics/cfg/datasets/brain-tumor.yaml
@@ -11,7 +11,7 @@
 # Train/val/test sets as 1) dir: path/to/imgs, 2) file: path/to/imgs.txt, or 3) list: [path/to/imgs1, path/to/imgs2, ..]
 path: ../datasets/brain-tumor # dataset root dir
 train: train/images # train images (relative to 'path') 893 images
-val: valid/images # val images (relative to 'path') 223 images
+val: val/images # val images (relative to 'path') 223 images
 test: # test images (relative to 'path')
 
 # Classes
